# yggdrasil

./: .gitignore  API_REFERENCE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _config.yml  api-reference.md  docs.md  hatch_build.py  hatch_coconut_hook.py  index.md  pyproject.toml
benchmarks/: baseline.py  graph_runner.py  metrics.py  results.csv  run_all.py  tasks.py
configs/examples/: procurement.graph.yaml  procurement.routing-scenarios.yaml  prod.env.yaml
docs/: advanced-configuration.md  architecture.md  batch-execution.md  choose-backend.md  control-plane-thesis.md  core-runtime-maturity.md  domain-knowledge-graphs.md  explainable-systems.md  first-graph.md  flagship-workflow.md  graph-state-management.md  long-running-workflows.md  neurosymbolic-reasoning.md  observability.md  repo-map.md  start-here.md  visualizer-product-spec.md  visualizer-web-ui.md  why-behavior-changed.md  workflow-patterns.md
examples/: _stub_backend.py  approval_workflow.py  builder_echo.py  deterministic_routing.py  fan_in_workers.py  image_query_and_visual_rag.py  neurosymbolic_pipeline.py  parallel_workers.py  research_pipeline.py  subgraph_lmstudio.py  subgraph_reuse.py
tests/: conftest.py  test_app_api.py  test_batch.py  test_claude_code_executor.py  test_devex.py  test_docs_layout.py  test_domain_graph.py  test_examples.py  test_executor.py  test_image_support.py  test_public_api.py  test_reasoner_node.py  test_recording_backend.py  test_retrieval.py  test_subgraph_helpers.py  test_symbolic.py  test_trace_ui.py  test_transform.py  test_viz.py
yggdrasil/: __init__.py  app.py  batch.py  observability.py  trace_ui.py
yggdrasil/backends/: __init__.py  claude_code.py  llm.py  neo4j.py
yggdrasil/core/: executor.py  nodes.py  store.py
yggdrasil/exporters/: __init__.py  otel.py
yggdrasil/retrieval/: __init__.py  embedder.py  wrrf.py
yggdrasil_lm/: __coconut__.py  __init__.coco  __init__.py  app.coco  app.py  batch.coco  batch.py  media.coco  media.py  observability.coco  observability.py  testing.coco  testing.py  trace_ui.coco  trace_ui.py
(+65 files in other folders)
