[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yggdrasil"
version = "0.1.0"
description = "Yggdrasil: a Python framework for graph-native agent orchestration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Hoang Dao" },
]
keywords = ["agents", "graph", "llm", "orchestration", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "mcp>=1.0",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic   = ["anthropic>=0.40.0"]
openai      = ["openai>=1.0"]
neo4j       = ["neo4j>=5.0"]
claude-code = ["claude-agent-sdk>=0.1"]
embeddings  = ["sentence-transformers>=3.0"]
dev         = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff", "rich>=13.0"]
observe     = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
viz         = ["fastapi>=0.100", "uvicorn>=0.24", "websockets>=11.0"]

[project.scripts]
yggdrasil-config = "yggdrasil.config.cli:main"
yggdrasil = "yggdrasil.graphadmin.cli:main"

[project.urls]
Homepage = "https://github.com/hoangdao1/yggdrasil"
Repository = "https://github.com/hoangdao1/yggdrasil"
Issues = "https://github.com/hoangdao1/yggdrasil/issues"
Documentation = "https://github.com/hoangdao1/yggdrasil#readme"

[tool.hatch.build.targets.wheel]
packages = ["yggdrasil"]

[tool.hatch.build.targets.sdist]
include = [
    "/yggdrasil",
    "/README.md",
    "/API_REFERENCE.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
